Fix images being too large

--- a/Lectures/_reveal-md/theme.css
+++ b/Lectures/_reveal-md/theme.css
@@ -116,11 +116,3 @@
   width: 5em;
 	float: right;
 }
-
-.reveal.reveal img
-{
-    border: none;
-    box-shadow: none;
-    max-height: calc(66vh);
-    max-width: calc(66vw);
-}
